--- a/SabertoothLexicon.csproj
+++ b/SabertoothLexicon.csproj
@@ -33,8 +33,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Lexicon.cs" />
     <Compile Include="MIME.cs" />
+    <Compile Include="Common.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
