--- a/SabertoothLexicon.csproj
+++ b/SabertoothLexicon.csproj
@@ -35,6 +35,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MIME.cs" />
     <Compile Include="Common.cs" />
+    <Compile Include="BaseMandate.cs" />
+    <Compile Include="Client.cs" />
+    <Compile Include="Resource.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
