--- a/SabertoothLexicon.csproj
+++ b/SabertoothLexicon.csproj
@@ -9,6 +9,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Sabertooth.Lexicon</RootNamespace>
     <AssemblyName>Lexicon</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,12 +34,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MIME.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="Client.cs" />
     <Compile Include="Resource.cs" />
     <Compile Include="Attributes.cs" />
     <Compile Include="SiteBase.cs" />
+    <Compile Include="Restriction.cs" />
+    <Compile Include="Website.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
